--- a/src/sphinxjp/themes/revealjs/templates/revealjs/layout.html
+++ b/src/sphinxjp/themes/revealjs/templates/revealjs/layout.html
@@ -22,9 +22,9 @@ Master layout template for Sphinx themes.
 {%- endif %}
 
 {%- macro script() %}
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script src="{{ pathto('_static/js/jquery.min.js', 1) }}"></script>
 <script src="{{ pathto('_static/lib/js/head.min.js', 1) }}"></script>
-<script src="{{ pathto('_static/js/reveal.js', 1) }}"></script>
+<script src="{{ pathto('_static/js/reveal.min.js', 1) }}"></script>
 {%- endmacro %}
 
 {%- macro css() %}
@@ -58,9 +58,15 @@ Master layout template for Sphinx themes.
       {%- endif %}
     {%- endif %}
 
-    <!-- If the query includes 'print-pdf', use the PDF print sheet -->
+    <!-- If the query includes 'print-pdf', include the PDF print sheet -->
     <script>
-      document.write('<link rel="stylesheet" href="{{ pathto('_static/css/print/', 1) }}' + ( window.location.search.match( /print-pdf/gi ) ? 'pdf' : 'paper' ) + '.css" type="text/css" media="print">' );
+        if(window.location.search.match(/print-pdf/gi)) {
+            var link = document.createElement('link');
+            link.rel = 'stylesheet';
+            link.type = 'text/css';
+            link.href = '{{ pathto('_static/css/print/pdf.css', 1) }}';
+            document.getElementsByTagName('head')[0].appendChild(link);
+        }
     </script>
 
     <!--[if lt IE 9]>
@@ -68,11 +74,10 @@ Master layout template for Sphinx themes.
     <![endif]-->
 
     {%- for scriptfile in script_files %}
-    {%- if scriptfile != '_static/jquery.js' and scriptfile != '_static/underscore.js' and scriptfile != '_static/doctools.js'%}
+    {%- if scriptfile not in ('_static/jquery.js', '_static/underscore.js', '_static/doctools.js') %}
       <script type="text/javascript" src="{{ pathto(scriptfile, 1) }}"></script>
     {%- endif %}
     {%- endfor %}
-
   </head>
   <body>
     <div class="reveal">
@@ -118,21 +123,66 @@ Master layout template for Sphinx themes.
         transitionSpeed: "{{ theme_transition_speed }}",
         backgroundTransition: "{{ theme_background_transition }}",
 
-        theme: Reveal.getQueryHash().theme || "{{ theme_theme }}", // available themes are in /css/theme
-        transition: Reveal.getQueryHash().transition || "{{ theme_transition }}", // default/cube/page/concave/zoom/linear/fade/none
+        slideNumber: {{ theme_slide_number|lower }},
+        embedded: {{ theme_embedded|lower }},
+        autoSlideStoppable: {{ theme_auto_slide_stoppable|lower }},
+        hideAddressBar: {{ theme_hide_address_bar|lower }},
+
+        parallaxBackgroundImage: '{{ theme_parallax_background_image }}',
+        parallaxBackgroundSize: '{{ theme_parallax_background_size }}',
+
+        focusBodyOnPageVisiblityChange: {{ theme_focus_body_on_page_visibility_change|lower }},
+
+        viewDistance: {{ theme_view_distance }},
+
+        theme: Reveal.getQueryHash().theme || "{{ theme_theme }}",
+        transition: Reveal.getQueryHash().transition || "{{ theme_transition }}",
+
+        {% if theme_multiplex %}
+        multiplex: {
+            {%- for k, v in theme_multiplex.iteritems() -%}
+            {%- if v %}
+                {{ k }}: "{{ v }}"{%- if not loop.last %},{% endif -%}
+            {% endif -%}
+            {% endfor %}
+        },
+        {% endif -%}
+        {%- if theme_leap %}
+        leap: {
+            {% for k, v in theme_leap.iteritems() -%}
+                {% if k in ('autoCenter', 'naturalSwipe') -%}
+                    {{ k }}: {{ v|lower }}{% if not loop.last -%},{% endif %}
+                {% elif k in ('pointerColor') -%}
+                    {{ k }}: "{{ v }}"{% if not loop.last -%},{% endif %}
+                {% else -%}
+                    {{ k }}: {{ v }}{% if not loop.last -%},{% endif %}
+                {% endif -%}
+            {% endfor -%}
+        },
+        {% endif %}
+        {%- if theme_math  %}
+        math: {
+            {% for k, v in theme_math.iteritems() -%}
+                {{ k }}: "{{ v }}"{%- if not loop.last %},{% endif -%}
+            {% endfor -%}
+        },
+        {% endif %}
 
         dependencies: [
-        { src: '{{ pathto('_static/lib/js/classList.js', 1) }}', condition: function() { return !document.body.classList; } },
-        { src: '{{ pathto('_static/plugin/markdown/marked.js', 1) }}', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
-        { src: '{{ pathto('_static/plugin/markdown/markdown.js', 1) }}', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
-        { src: '{{ pathto('_static/plugin/highlight/highlight.js', 1) }}', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
-        { src: '{{ pathto('_static/plugin/zoom-js/zoom.js', 1) }}', async: true, condition: function() { return !!document.body.classList; } },
-        {%- for plugin in theme_plugin_list %}
-        { src: '{{ pathto('_static/plugin/' + plugin, 1) }}', async: true, condition: function() { return !!document.body.classList; } },
-        {% endfor %}
-        { src: '{{ pathto('_static/plugin/notes/notes.js', 1) }}', async: true, condition: function() { return !!document.body.classList; } }
+           { src: '{{ pathto('_static/lib/js/classList.js', 1) }}', condition: function() { return !document.body.classList; } },
+           { src: '{{ pathto('_static/plugin/markdown/marked.js', 1) }}', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+           { src: '{{ pathto('_static/plugin/markdown/markdown.js', 1) }}', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+           { src: '{{ pathto('_static/plugin/highlight/highlight.js', 1) }}', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
+           { src: '{{ pathto('_static/plugin/zoom-js/zoom.js', 1) }}', async: true, condition: function() { return !!document.body.classList; } },
+           {%- for plugin in theme_plugin_list %}
+           { src: '{{ plugin }}', async: true, condition: function() { return !!document.body.classList; } },
+           {% endfor %}
+           { src: '{{ pathto('_static/plugin/notes/notes.js', 1) }}', async: true, condition: function() { return !!document.body.classList; } }
         ]
       });
     </script>
+    {% if theme_customjs  -%}
+    <script src="{{ pathto('_static/' + theme_customjs, 1) }}"></script>
+    {% endif  %}
   </body>
 </html>
