fixes #1 fixed and update minor version.

--- a/src/sphinxjp/themes/revealjs/templates/revealjs/layout.html
+++ b/src/sphinxjp/themes/revealjs/templates/revealjs/layout.html
@@ -128,8 +128,8 @@ Master layout template for Sphinx themes.
         autoSlideStoppable: {{ theme_auto_slide_stoppable|lower }},
         hideAddressBar: {{ theme_hide_address_bar|lower }},
 
-        parallaxBackgroundImage: '{{ theme_parallax_background_image }}',
-        parallaxBackgroundSize: '{{ theme_parallax_background_size }}',
+        parallaxBackgroundImage: "{{ theme_parallax_background_image }}",
+        parallaxBackgroundSize: "{{ theme_parallax_background_size }}",
 
         focusBodyOnPageVisiblityChange: {{ theme_focus_body_on_page_visibility_change|lower }},
 
