--- a/src/sphinxjp/themes/revealjs/templates/revealjs/static/DejaVu/dejavu.css
+++ b/src/sphinxjp/themes/revealjs/templates/revealjs/static/DejaVu/dejavu.css
@@ -1,6 +1,6 @@
 /* Webfont: DejaVu Sans Mono */@font-face {
     font-family: 'DejaVu Sans Mono';
-    src: url('DejaVuSansMono.ttf') format('truetype');
+    src: url('DejaVuSansMono.woff2') format('woff2');
     font-style: normal;
     font-weight: normal;
     text-rendering: optimizeLegibility;
@@ -8,7 +8,7 @@
 
 /* Webfont: DejaVu Sans Mono Bold */@font-face {
     font-family: 'DejaVu Sans Mono Bold';
-    src: url('DejaVuSansMono-Bold.ttf') format('truetype');
+    src: url('DejaVuSansMono-Bold.woff2') format('woff2');
     font-style: normal;
     font-weight: bold;
     text-rendering: optimizeLegibility;
@@ -16,7 +16,7 @@
 
 /* Webfont: DejaVu Sans Mono Bold Oblique */@font-face {
     font-family: 'DejaVu Sans Mono Bold Oblique';
-    src: url('DejaVuSansMono-BoldOblique.ttf') format('truetype');
+    src: url('DejaVuSansMono-BoldOblique.woff2') format('woff2');
     font-style: oblique;
     font-weight: bold;
     text-rendering: optimizeLegibility;
@@ -24,7 +24,7 @@
 
 /* Webfont: DejaVu Sans Mono Oblique */@font-face {
     font-family: 'DejaVu Sans Mono Oblique';
-    src: url('DejaVuSansMono-Oblique.ttf') format('truetype');
+    src: url('DejaVuSansMono-Oblique.woff2') format('woff2');
     font-style: oblique;
     font-weight: normal;
     text-rendering: optimizeLegibility;
@@ -32,7 +32,7 @@
 
 /* Webfont: DejaVu Sans */@font-face {
     font-family: 'DejaVu Sans';
-    src: url('DejaVuSans.ttf') format('truetype');
+    src: url('DejaVuSans.woff2') format('woff2');
     font-style: normal;
     font-weight: normal;
     text-rendering: optimizeLegibility;
@@ -40,7 +40,7 @@
 
 /* Webfont: DejaVu Sans Bold */@font-face {
     font-family: 'DejaVu Sans Bold';
-    src: url('DejaVuSans-Bold.ttf') format('truetype');
+    src: url('DejaVuSans-Bold.woff2') format('woff2');
     font-style: normal;
     font-weight: bold;
     text-rendering: optimizeLegibility;
@@ -48,7 +48,7 @@
 
 /* Webfont: DejaVu Sans Bold Oblique */@font-face {
     font-family: 'DejaVu Sans Bold Oblique';
-    src: url('DejaVuSans-BoldOblique.ttf') format('truetype');
+    src: url('DejaVuSans-BoldOblique.woff2') format('woff2');
     font-style: oblique;
     font-weight: bold;
     text-rendering: optimizeLegibility;
@@ -56,7 +56,7 @@
 
 /* Webfont: DejaVu Sans Oblique */@font-face {
     font-family: 'DejaVu Sans Oblique';
-    src: url('DejaVuSans-Oblique.ttf') format('truetype');
+    src: url('DejaVuSans-Oblique.woff2') format('woff2');
     font-style: oblique;
     font-weight: normal;
     text-rendering: optimizeLegibility;
@@ -64,7 +64,7 @@
 
 /* Webfont: DejaVu Sans ExtraLight */@font-face {
     font-family: 'DejaVu Sans ExtraLight';
-    src: url('DejaVuSans-ExtraLight.ttf') format('truetype');
+    src: url('DejaVuSans-ExtraLight.woff2') format('woff2');
     font-style: normal;
     font-weight: normal;
     text-rendering: optimizeLegibility;
@@ -72,7 +72,7 @@
 
 /* Webfont: DejaVu Serif */@font-face {
     font-family: 'DejaVu Serif';
-    src: url('DejaVuSerif.ttf') format('truetype');
+    src: url('DejaVuSerif.woff2') format('woff2');
     font-style: normal;
     font-weight: normal;
     text-rendering: optimizeLegibility;
@@ -80,7 +80,7 @@
 
 /* Webfont: DejaVu Serif Bold */@font-face {
     font-family: 'DejaVu Serif Bold';
-    src: url('DejaVuSerif-Bold.ttf') format('truetype');
+    src: url('DejaVuSerif-Bold.woff2') format('woff2');
     font-style: normal;
     font-weight: bold;
     text-rendering: optimizeLegibility;
@@ -88,7 +88,7 @@
 
 /* Webfont: DejaVu Serif Bold Italic  */@font-face {
     font-family: 'DejaVu Serif Bold Italic ';
-    src: url('DejaVuSerif-BoldItalic.ttf') format('truetype');
+    src: url('DejaVuSerif-BoldItalic.woff2') format('woff2');
     font-style: italic;
     font-weight: bold;
     text-rendering: optimizeLegibility;
@@ -96,7 +96,7 @@
 
 /* Webfont: DejaVu Serif Italic */@font-face {
     font-family: 'DejaVu Serif Italic';
-    src: url('DejaVuSerif-Italic.ttf') format('truetype');
+    src: url('DejaVuSerif-Italic.woff2') format('woff2');
     font-style: italic;
     font-weight: normal;
     text-rendering: optimizeLegibility;
@@ -104,7 +104,7 @@
 
 /* Webfont: DejaVu Sans Condensed */@font-face {
     font-family: 'DejaVu Sans Condensed';
-    src: url('DejaVuSansCondensed.ttf') format('truetype');
+    src: url('DejaVuSansCondensed.woff2') format('woff2');
     font-style: normal;
     font-weight: lighter;
     text-rendering: optimizeLegibility;
@@ -112,7 +112,7 @@
 
 /* Webfont: DejaVu Sans Condensed Bold */@font-face {
     font-family: 'DejaVu Sans Condensed Bold';
-    src: url('DejaVuSansCondensed-Bold.ttf') format('truetype');
+    src: url('DejaVuSansCondensed-Bold.woff2') format('woff2');
     font-style: normal;
     font-weight: bold;
     text-rendering: optimizeLegibility;
@@ -120,7 +120,7 @@
 
 /* Webfont: DejaVu Sans Condensed Bold Oblique */@font-face {
     font-family: 'DejaVu Sans Condensed Bold Oblique';
-    src: url('DejaVuSansCondensed-BoldOblique.ttf') format('truetype');
+    src: url('DejaVuSansCondensed-BoldOblique.woff2') format('woff2');
     font-style: oblique;
     font-weight: bold;
     text-rendering: optimizeLegibility;
@@ -128,7 +128,7 @@
 
 /* Webfont: DejaVu Sans Condensed Oblique */@font-face {
     font-family: 'DejaVu Sans Condensed Oblique';
-    src: url('DejaVuSansCondensed-Oblique.ttf') format('truetype');
+    src: url('DejaVuSansCondensed-Oblique.woff2') format('woff2');
     font-style: oblique;
     font-weight: lighter;
     text-rendering: optimizeLegibility;
@@ -136,7 +136,7 @@
 
 /* Webfont: DejaVu Serif Condensed */@font-face {
     font-family: 'DejaVu Serif Condensed';
-    src: url('DejaVuSerifCondensed.ttf') format('truetype');
+    src: url('DejaVuSerifCondensed.woff2') format('woff2');
     font-style: normal;
     font-weight: lighter;
     text-rendering: optimizeLegibility;
@@ -144,7 +144,7 @@
 
 /* Webfont: DejaVu Serif Condensed Bold */@font-face {
     font-family: 'DejaVu Serif Condensed Bold';
-    src: url('DejaVuSerifCondensed-Bold.ttf') format('truetype');
+    src: url('DejaVuSerifCondensed-Bold.woff2') format('woff2');
     font-style: normal;
     font-weight: bold;
     text-rendering: optimizeLegibility;
@@ -152,7 +152,7 @@
 
 /* Webfont: DejaVu Serif Condensed Bold Italic */@font-face {
     font-family: 'DejaVu Serif Condensed Bold Italic';
-    src: url('DejaVuSerifCondensed-BoldItalic.ttf') format('truetype');
+    src: url('DejaVuSerifCondensed-BoldItalic.woff2') format('woff2');
     font-style: italic;
     font-weight: bold;
     text-rendering: optimizeLegibility;
@@ -160,7 +160,7 @@
 
 /* Webfont: DejaVu Serif Condensed Italic */@font-face {
     font-family: 'DejaVu Serif Condensed Italic';
-    src: url('DejaVuSerifCondensed-Italic.ttf') format('truetype');
+    src: url('DejaVuSerifCondensed-Italic.woff2') format('woff2');
     font-style: italic;
     font-weight: normal;
     text-rendering: optimizeLegibility;
@@ -168,7 +168,7 @@
 
 /* Webfont: DejaVu Math TeX Gyre */@font-face {
     font-family: 'DejaVu Math TeX Gyre';
-    src: url('DejaVuMathTeXGyre.ttf') format('truetype');
+    src: url('DejaVuMathTeXGyre.woff2') format('woff2');
     font-style: normal;
     font-weight: normal;
     text-rendering: optimizeLegibility;
