--- a/src/sphinxjp/themes/revealjs/templates/revealjs/layout.html
+++ b/src/sphinxjp/themes/revealjs/templates/revealjs/layout.html
@@ -12,20 +12,18 @@ Master layout template for Sphinx themes.
 {%- block doctype -%}
 <!DOCTYPE html>
 {%- endblock %}
-{%- set url_root = pathto('', 1) %}
-{# XXX necessary? #}
-{%- if url_root == '#' %}{% set url_root = '' %}{% endif %}
 
 {%- macro script() %}
 <script src="{{ pathto('_static/js/jquery.min.js', 1) }}"></script>
-<script src="{{ pathto('_static/js/reveal.js', 1) }}"></script>
+<script src="{{ pathto('_static/js/reveal.min.js', 1) }}"></script>
 {%- endmacro %}
 
 {%- macro css() %}
-<link rel="stylesheet" href="{{ pathto('_static/css/reveal.css', 1) }}">
-<link rel="stylesheet" href="{{ pathto('_static/css/theme/' + (theme_theme or 'black') + '.css', 1) }}" id="theme">
+<link rel="stylesheet" href="{{ pathto('_static/css/reset.css', 1) }}">
+<link rel="stylesheet" href="{{ pathto('_static/css/reveal.min.css', 1) }}">
+<link rel="stylesheet" href="{{ pathto('_static/css/theme/' + (theme_theme or 'dejavu') + '.css', 1) }}" id="theme">
+<!-- Theme used for syntax highlighting of code -->
 <link rel="stylesheet" href="{{ pathto('_static/lib/css/zenburn.css', 1) }}">
-<link rel="stylesheet" href="{{ pathto('_static/' + style, 1) }}" type="text/css" />
 
 {% if theme_customcss  -%}
 <link rel="stylesheet" href="{{ pathto('_static/' + theme_customcss, 1) }}" type="text/css" />
@@ -38,14 +36,13 @@ Master layout template for Sphinx themes.
 
 <html lang="{{ theme_lang }}">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-
+    <meta charset="utf-8" />
     {%- block htmltitle %}
     <title>{{ title|striptags|e }}</title>
     {%- endblock %}
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     {{ metatags }}
 
@@ -57,16 +54,15 @@ Master layout template for Sphinx themes.
       {%- endif %}
     {%- endif %}
 
-    <!-- If the query includes 'print-pdf', include the PDF print sheet -->
+    <!-- Printing and PDF exports -->
     <script>
-        if(window.location.search.match(/print-pdf/gi)) {
-            var link = document.createElement('link');
-            link.rel = 'stylesheet';
-            link.type = 'text/css';
-            link.href = '{{ pathto('_static/css/print/pdf.css', 1) }}';
-            document.getElementsByTagName('head')[0].appendChild(link);
-        }
+      var link = document.createElement( 'link' );
+      link.rel = 'stylesheet';
+      link.type = 'text/css';
+      link.href = window.location.search.match( /print-pdf/gi ) ? '{{ pathto('_static/css/print/pdf.css', 1) }}' : '{{ pathto('_static/css/print/paper.css', 1) }}';
+      document.getElementsByTagName( 'head' )[0].appendChild( link );
     </script>
+
 
     <!--[if lt IE 9]>
     <script src="{{ pathto('_static/lib/js/html5shiv.js', 1) }}"></script>
@@ -167,14 +163,15 @@ Master layout template for Sphinx themes.
         {% endif %}
 
         dependencies: [
-           { src: '{{ pathto('_static/plugin/markdown/marked.js', 1) }}', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
-           { src: '{{ pathto('_static/plugin/markdown/markdown.js', 1) }}', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
-           { src: '{{ pathto('_static/plugin/highlight/highlight.js', 1) }}', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
-           { src: '{{ pathto('_static/plugin/zoom-js/zoom.js', 1) }}', async: true, condition: function() { return !!document.body.classList; } },
-           {%- for plugin in theme_plugin_list %}
-           { src: '{{ plugin }}', async: true, condition: function() { return !!document.body.classList; } },
-           {% endfor %}
-           { src: '{{ pathto('_static/plugin/notes/notes.js', 1) }}', async: true, condition: function() { return !!document.body.classList; } }
+          { src: '{{ pathto('_static/plugin/markdown/marked.js', 1) }}', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+          { src: '{{ pathto('_static/plugin/markdown/markdown.js', 1) }}', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+          { src: '{{ pathto('_static/plugin/highlight/highlight.js', 1) }}', async: true },
+          { src: '{{ pathto('_static/plugin/search/search.js', 1) }}', async: true },
+          { src: '{{ pathto('_static/plugin/zoom-js/zoom.js', 1) }}', async: true },
+          { src: '{{ pathto('_static/plugin/notes/notes.js', 1) }}', async: true},
+          {%- for plugin in theme_plugin_list %}
+          { src: '{{ plugin }}', async: true},
+          {% endfor %}
         ]
       });
     </script>
