jQuery: use jQuery from the sphinx-doc build
Sphinx-doc's basic theme already contain a jQuery implementation. ATM Sphinx-doc
uses jQuery v3.2.1 which is behind the drooped v3.4.0, but this has no effect so
lets go with the jQuery from the basic theme:

- https://github.com/sphinx-doc/sphinx/blob/master/sphinx/themes/basic/static/jquery.js

Signed-off-by: Markus Heiser <markus.heiser@darmarit.de>

--- a/src/sphinxjp/themes/revealjs/templates/revealjs/layout.html
+++ b/src/sphinxjp/themes/revealjs/templates/revealjs/layout.html
@@ -14,7 +14,7 @@ Master layout template for Sphinx themes.
 {%- endblock %}
 
 {%- macro script() %}
-<script src="{{ pathto('_static/js/jquery.min.js', 1) }}"></script>
+<script src="{{ pathto('_static/jquery.js', 1) }}"></script>
 <script src="{{ pathto('_static/js/reveal.min.js', 1) }}"></script>
 {%- endmacro %}
 
